--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             From renowned favourites to unique local delicacies, Filipino food is 
             bursting with flavours that will satisfy diverse palates.
           </h5>
+          <a href="" class="btn btn-large">Learn More</a>
         </div>
         </div>
       </li>
@@ -97,8 +98,8 @@
       $(".slider").slider({
         indicators:false,
         height:500,
-        transition:4000,
-        interval: 6000
+        transition:3000,
+        interval: 5000
       });
   </script>
 </body>
