--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
     </ul>
   </section>
 
+  <!-- Section: Search -->
+  <section class="section section-search teal darken-1 white-text center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h3>Search Destinations</h3>
+          <div class="input-field">
+            <input type="text" class="white grey-text autocomplete"
+            placeholder="Manila, Boracay, Palawan, etc..." id="autocomplete-input">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/all.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -101,6 +116,9 @@
         transition:3000,
         interval: 5000
       });
+
+      //Autocomplete
+      
   </script>
 </body>
 
