--- a/index.html
+++ b/index.html
@@ -98,6 +98,38 @@
     </div>
   </section>
 
+  <!-- Section:Icon boxes -->
+  <section class="section section-icons grey lighten-4 center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card-panel">
+          <i class="material-icons large teal-text">room</i>
+          <h4>Pick where</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, vel.</p>
+        </div>
+        </div>
+        <!-- column end --> 
+        <div class="col s12 m4">
+          <div class="card-panel">
+          <i class="material-icons large teal-text">store</i>
+          <h4>Travel shop</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, vel.</p>
+        </div>
+        </div>
+        <!-- column end --> 
+        <div class="col s12 m4">
+          <div class="card-panel">
+          <i class="material-icons large teal-text">airplanemode_active</i>
+          <h4>Fly Cheap</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, vel.</p>
+        </div>
+      </div>
+        <!-- column end --> 
+      </div>        
+    </div>
+  </section>
+
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/all.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
