--- a/index.html
+++ b/index.html
@@ -129,6 +129,33 @@
       </div>        
     </div>
   </section>
+  <!-- Section: Follow -->
+  <section class="section section-follow teal darken-2 white-text center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h4>Follow Wow Philippines</h4>
+          <p>Follow us on social media for special offers</p>
+          <a href="https://facebook.com" target=_"blank" class="white-text">
+            <i class="fab fa-facebook fa-4x"></i>
+          </a>
+          <a href="https://twitter.com" target=_"blank" class="white-text">
+            <i class="fab fa-twitter fa-4x"></i>
+          </a>
+          <a href="https://linkedin.com" target=_"blank" class="white-text">
+            <i class="fab fa-linkedin fa-4x"></i>
+          </a>
+          <a href="https://googleplus.com" target=_"blank" class="white-text">
+            <i class="fab fa-google-plus fa-4x"></i>
+          </a>
+          <a href="https://pinterest.com" target=_"blank" class="white-text">
+            <i class="fab fa-pinterest fa-4x"></i>
+          </a>
+        </div>
+        <!-- End of column -->
+      </div>
+    </div>
+  </section>
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/all.min.js"></script>
