Button for booking

--- a/index.html
+++ b/index.html
@@ -170,7 +170,14 @@
         </div>
         <!-- end of column -->
       </div>  
-
+      <div class="row">
+        <div class="col s12 center">
+          <a href="contact" class="btn btn-large grey darken-3">
+            <i class="material-icons left">send</i>
+              Contact For Booking
+          </a>
+        </div>
+      </div>
     </div>
     <!--End of container-->
   </section>
@@ -198,7 +205,7 @@
           </a>
         </div>
         <!-- End of column -->
-      </div>
+      </div>      
     </div>
   </section>
 
