--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-              <img src="img/Boracay.jpg" alt="">
+              <img class="responsive-img" src="img/Boracay.jpg" alt="">
               <span class="card-title">Boracay</span>
             </div>
             <div class="card-content">
@@ -208,7 +208,71 @@
       </div>      
     </div>
   </section>
-
+<!-- Section:Gallery -->
+<section class="section section-gallery">
+  <div class="container">
+    <h4 class="center">
+      <span class="teal-text">Photo</span> Gallery
+    </h4>
+    <div class="row">
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?boracay" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?cebu" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?bohol" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?palawan" alt="beach">
+      </div>
+      <!-- end of column -->
+    </div>
+    <!-- end of row -->
+    <div class="row">
+      <div class="col s12 m3">
+        <img class="materialdboxe responsive-img" src="https://source.unsplash.com/1600x900/?manila" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?subic" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?bataan" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?batangas" alt="beach">
+      </div>
+      <!-- end of column -->
+    </div>
+    <!-- end of row -->
+    <div class="row">
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?zamboanga" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?baguio" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?davao" alt="beach">
+      </div>
+      <!-- end of column -->
+      <div class="col s12 m3">
+        <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?isabela" alt="beach">
+      </div>
+      <!-- end of column -->
+    </div>
+    <!-- end of row -->
+  </div>
+</section>
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/all.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -238,7 +302,9 @@
       });
     });
 
-     
+    //Materialboxed
+    $('.materialboxed').materialbox();
+         
   </script>
 </body>
 
