--- a/index.html
+++ b/index.html
@@ -273,6 +273,59 @@
     <!-- end of row -->
   </div>
 </section>
+
+<!-- Section: Contact -->
+<div class="section section-contact">
+  <div class="container">
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card-panel teal white-text center">
+          <i class="material-icons medium">email</i>
+          <h5>Contact us for booking</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus debitis, cumque similique consequatur vero voluptatum?</p>
+        </div>
+        <!-- end of card -->
+        <ul class="collection with-header">
+          <li class="collection-header">
+            <h4>Location</h4>
+          </li>
+          <li class="collection-item">travelville Agency</li>
+          <li class="collection-item">555 Beach rd, Suite 33</li>
+          <li class="collection-item">Miami FL, 55555</li>
+        </ul>
+      </div>
+      <!-- end of col -->
+      <div class="col s12 m6">
+       <div class="card-panel grey lighten-3">
+         <h5>Please fill out this form</h5>
+         <div class="input-field">
+           <input type="text" placeholder="Name" id="name">
+           <label for="name"></label>
+         </div>
+         <div class="input-field">
+          <input type="text" placeholder="Email" id="email">
+          <label for="name"></label>
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="Phone" id="phone">
+          <label for="name"></label>
+        </div>
+        <div class="input-field">
+          <textarea class="materialize-textarea" placeholder="Enter Message" id="message">
+          </textarea>  
+          <label for="mesage">Messsage</label>
+        </div>
+        <input type="submit" value="submit" class="btn">
+       </div>
+      </div>
+      <!-- end of col -->
+    </div>
+    <!-- end of row -->
+  </div>
+</div>
+
+
+
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/all.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
