--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Custom Materialize Theme</title>
 </head>
 
-<body>
+<body id="home" class="scrollspy">
   <!-- NAVBAR-FIXED  -->
   <div class="navbar-fixed">
     <nav class="teal"> 
@@ -84,7 +84,7 @@
   </section>
 
   <!-- Section: Search -->
-  <section class="section section-search teal darken-1 white-text center">
+  <section id="search" class="section section-search teal darken-1 white-text center scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -130,7 +130,7 @@
     </div>
   </section>
   <!-- Section: Popular -->
-  <section class="section section-popular">
+  <section id="popular" class="section section-popular scrollspy">
     <div class="container">
       <div class="row">
         <h4 class="center"><span class="teal-text">Popular</span>Places</h4>
@@ -209,7 +209,7 @@
     </div>
   </section>
 <!-- Section:Gallery -->
-<section class="section section-gallery">
+<section id="gallery" class="section section-gallery scrollspy">
   <div class="container">
     <h4 class="center">
       <span class="teal-text">Photo</span> Gallery
@@ -275,7 +275,7 @@
 </section>
 
 <!-- Section: Contact -->
-<div class="section section-contact">
+<div id="contact" class="section section-contact scrollspy">
   <div class="container">
     <div class="row">
       <div class="col s12 m6">
@@ -323,8 +323,12 @@
     <!-- end of row -->
   </div>
 </div>
+</section>
 
-
+<!-- Section:Footer -->
+<footer class="section teal darken-2 white-text center">
+  <p class="flow-text">Wow Philippines &copy; 2021 </p>
+</footer>
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="js/all.min.js"></script>
@@ -357,6 +361,9 @@
 
     //Materialboxed
     $('.materialboxed').materialbox();
+
+    //Scroll spy
+    $('.scrollspy').scrollSpy();
          
   </script>
 </body>
